# cuda-playground

./: .gitignore  makefile  meson.build  readme.md
include/: graph.hh
include/cpu/: spp.hh
include/gpu/: spp.cuh
src/: graph.cc  meson.build
src/cpu/: spp.cc
src/gpu/: spp.cu
test/: boost_spp_test.cc  cpu_spp_test.cc  gpu_spp_test.cu  meson.build
